fix: code blocks left align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -277,7 +277,7 @@
 }
 
 
-figure { text-align: center; }
+figure { text-align: left; }
 figcaption { 
     font-size: 0.8em;
     font-family: $header-font-family;
